--- a/AnagramSolver/AnagramSolver.Cli/AnagramSolver.Cli.csproj
+++ b/AnagramSolver/AnagramSolver.Cli/AnagramSolver.Cli.csproj
@@ -12,4 +12,13 @@
     <ProjectReference Include="..\AnagramSolver.Contracts\AnagramSolver.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="zodynas.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
