webapp call api for anagrams

--- a/AnagramSolver/AnagramSolver.WebApp/AnagramSolver.WebApp.csproj
+++ b/AnagramSolver/AnagramSolver.WebApp/AnagramSolver.WebApp.csproj
@@ -7,14 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AnagramSolver.Api\AnagramSolver.Api.csproj" />
     <ProjectReference Include="..\AnagramSolver.BusinessLogic\AnagramSolver.BusinessLogic.csproj" />
     <ProjectReference Include="..\AnagramSolver.Contracts\AnagramSolver.Contracts.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="zodynas.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
